# package-scan

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_HUB.md  Dockerfile  GEMINI.md  README.md  ROADMAP.md  hulud-report.json  package_scan_report.json  pyproject.toml  scan_npm_threats.py  setup.py  sha1-Hulud.csv  tag-and-push.sh
.github/workflows/: BuildAndDeployDocs.yml  DockerImageReleaseWorkflow.yml  RunTests.yml
docs/source/: architecture.rst  conf.py  index.rst  introduction.rst  usage.rst
docs/source/api/: adapters.rst  core.rst  index.rst
examples/test-package/: package-lock.json  package.json
examples/test-python/: Pipfile  pyproject.toml  requirements.txt
scripts/: sync-version.sh  tag-and-push.sh
src/hulud_scan/: __init__.py  cli.py
src/hulud_scan/adapters/: npm_adapter.py  python_adapter.py
src/package_scan/: __init__.py  cli.py  scan_npm_threats.py
src/package_scan/adapters/: __init__.py  base.py  java_adapter.py  npm_adapter.py  python_adapter.py
src/package_scan/core/: __init__.py  models.py  report_engine.py  threat_database.py  threat_metadata.py  threat_validator.py
tests/: test_java_adapter.py  test_models.py  test_npm_adapter.py  test_python_adapter.py  test_report_engine.py  test_scanner.py  test_threat_database.py  test_threat_validator.py
