[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hulud-scan"
version = "0.1.0"
description = "NPM Package Threat Scanner for HULUD worm-compromised packages"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hulud Security" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.1",
  "semantic_version>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
npm-scan = "hulud_scan.scan_npm_threats:cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hulud_scan"]
