[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hulud-scan"
version = "0.2.0"
description = "Multi-ecosystem package threat scanner (npm, Maven/Gradle, pip, gem)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Hulud Security" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.1",
  "semantic_version>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18.0",
]
pnpm = ["pyyaml>=6.0"]
java = ["lxml>=4.9"]
python = ["packaging>=21.0", "toml>=0.10"]
all = ["pyyaml>=6.0", "lxml>=4.9", "packaging>=21.0", "toml>=0.10"]

[project.scripts]
hulud-scan = "hulud_scan.cli:cli"
npm-scan = "hulud_scan.cli:npm_scan_cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hulud_scan"]
