[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package-scan"
version = "0.3.1"
description = "Multi-ecosystem package threat scanner (npm, Maven/Gradle, pip, gem)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Package Scan Security" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.1",
  "semantic_version>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18.0",
]
pnpm = ["pyyaml>=6.0"]
java = ["lxml>=4.9"]
python = ["packaging>=21.0", "toml>=0.10"]
all = ["pyyaml>=6.0", "lxml>=4.9", "packaging>=21.0", "toml>=0.10"]

[project.scripts]
package-scan = "package_scan.cli:cli"
hulud-scan = "package_scan.cli:cli"  # Backward compatibility alias
npm-scan = "package_scan.cli:npm_scan_cli"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["package_scan"]
