[tool.poetry]
name = "test-python-project"
version = "1.0.0"
description = "Test project for hulud-scan with vulnerable Python dependencies"
authors = ["Test Author <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Vulnerable exact versions
requests = "2.7.0"
urllib3 = "1.24.2"

# Poetry caret notation that includes vulnerabilities
# ^2.2.0 means >=2.2.0,<3.0.0
django = "^2.2.0"

# Poetry tilde notation
# ~0.12.1 means >=0.12.1,<0.13.0
flask = "~0.12.1"

# Safe packages
certifi = "^2021.5.30"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
cryptography = "2.6.1"  # Vulnerable

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
